force-app/main/default/objects/Payment__c/fields/Amount_paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_paid__c</fullName>
    <description>Amount of this payment</description>
    <inlineHelpText>Amount of this payment</inlineHelpText>
    <label>Amount paid</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>