force-app/main/default/objects/Payment__c/fields/Amount_returned__c.field-meta.xml
<CustomField>
    <fullName>Amount_returned__c</fullName>
    <description>Part of this payment that was returned</description>
    <inlineHelpText>Part of this payment that was returned</inlineHelpText>
    <label>Amount returned</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>