force-app/main/default/objects/Payment__c/fields/Currency_code__c.field-meta.xml
<CustomField>
    <fullName>Currency_code__c</fullName>
    <description>The three-character code for the selected currency of this payment</description>
    <formula>MID( TEXT(Currency_of_payment__c) , 1, 3)</formula>
    <inlineHelpText>The three-character code for the selected currency of this payment</inlineHelpText>
    <label>Currency code</label>
    <type>Text</type>
</CustomField>