force-app/main/default/objects/Payment__c/fields/Date_grantee_non_receipt__c.field-meta.xml
<CustomField>
    <fullName>Date_grantee_non_receipt__c</fullName>
    <description>Date that we learned that the grantee has not received the payment</description>
    <inlineHelpText>Date that we learned that the grantee has not received the payment</inlineHelpText>
    <label>Date grantee non receipt</label>
    <type>Date</type>
</CustomField>