force-app/main/default/objects/Payment__c/fields/Date_payment_letter_sent__c.field-meta.xml
<CustomField>
    <fullName>Date_payment_letter_sent__c</fullName>
    <description>The date which this payment&apos;s payment letter was sent (auto-filled)</description>
    <inlineHelpText>The date which this payment&apos;s payment letter was sent (auto-filled)</inlineHelpText>
    <label>Date payment letter sent</label>
    <type>Date</type>
</CustomField>