force-app/main/default/objects/Payment__c/fields/Date_stalled__c.field-meta.xml
<CustomField>
    <fullName>Date_stalled__c</fullName>
    <description>If non-blank, the date on which the payment got stalled (see &quot;Reason for Stall&quot; field for explanation and action required)</description>
    <inlineHelpText>If non-blank, the date on which the payment got stalled (see &quot;Reason for Stall&quot; field for explanation and action required)</inlineHelpText>
    <label>Date stalled</label>
    <type>Date</type>
</CustomField>