force-app/main/default/objects/Payment__c/fields/Fiscal_sponsor_name__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_sponsor_name__c</fullName>
    <description>The name of the fiscal sponsor for this grant, if any</description>
    <formula>IF(AND(
 NOT(ISBLANK( Payment_Method__c )),
 NOT(ISBLANK(Payment_Method__r.Fiscal_sponsor__c)),
 NOT(ISBLANK(Payment_Method__r.Fiscal_sponsor__r.Name)),
 TEXT(Payment_Method__r.Type__c) = &apos;Fiscal sponsor&apos;
 ), Payment_Method__r.Fiscal_sponsor__r.Name, &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The name of the fiscal sponsor for this grant, if any</inlineHelpText>
    <label>Fiscal sponsor name</label>
    <type>Text</type>
</CustomField>