force-app/main/default/objects/Payment__c/fields/Has_problem_non_formula__c.field-meta.xml
<CustomField>
    <fullName>Has_problem_non_formula__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This version of the Has Problem field is updated automatically by a workflow that copies the value from the formula version of the same field.  That lets it be accessed from a rollup summary in Proposal.</description>
    <inlineHelpText>This version of the Has Problem field is updated automatically by a workflow that copies the value from the formula version of the same field.  That lets it be accessed from a rollup summary in Proposal.</inlineHelpText>
    <label>Has problem (non-formula)</label>
    <type>Checkbox</type>
</CustomField>