force-app/main/default/objects/Payment__c/fields/Keep_confidential__c.field-meta.xml
<CustomField>
    <fullName>Keep_confidential__c</fullName>
    <description>Checked if this payment&apos;s account record is marked as Keep Confidential</description>
    <formula>Proposal__r.Account__r.Keep_confidential__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if this payment&apos;s account record is marked as Keep Confidential</inlineHelpText>
    <label>Keep confidential</label>
    <type>Checkbox</type>
</CustomField>