force-app/main/default/objects/Payment__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The milestone to which this payment is linked.</description>
    <inlineHelpText>The milestone to which this payment is linked.</inlineHelpText>
    <label>Milestone</label>
    <referenceTo>Milestone__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>