force-app/main/default/objects/Payment__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The payment method that was current at the time that the payment was created</description>
    <inlineHelpText>The payment method that was current at the time that the payment was created</inlineHelpText>
    <label>Payment Method</label>
    <referenceTo>Payment_Method__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>