force-app/main/default/objects/Payment__c/fields/Payment_method_most_recent__c.field-meta.xml
<CustomField>
    <fullName>Payment_method_most_recent__c</fullName>
    <description>Checked if the linked payment method is the most recent for the proposal</description>
    <formula>Payment_Method__r.Most_recent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if the linked payment method is the most recent for the proposal</inlineHelpText>
    <label>Payment method most recent</label>
    <type>Checkbox</type>
</CustomField>