force-app/main/default/objects/Payment__c/fields/Payment_type__c.field-meta.xml
<CustomField>
    <fullName>Payment_type__c</fullName>
    <description>The type of this payment</description>
    <inlineHelpText>The type of this payment</inlineHelpText>
    <label>Payment type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_type</valueSetName>
    </valueSet>
</CustomField>