force-app/main/default/objects/Payment__c/fields/Problem_description__c.field-meta.xml
<CustomField>
    <fullName>Problem_description__c</fullName>
    <description>Description of any problems w/ this payment</description>
    <inlineHelpText>Description of any problems w/ this payment</inlineHelpText>
    <label>Problem description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>