force-app/main/default/objects/Payment__c/fields/Prop_status__c.field-meta.xml
<CustomField>
    <fullName>Prop_status__c</fullName>
    <description>Status from parent proposal record</description>
    <formula>Proposal__r.Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Status from parent proposal record</inlineHelpText>
    <label>Prop status</label>
    <type>Text</type>
</CustomField>