force-app/main/default/objects/Payment__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <description>The proposal to which this payment belongs</description>
    <inlineHelpText>The proposal to which this payment belongs</inlineHelpText>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>