force-app/main/default/objects/Payment__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <description>The quarter of the fiscal year to which this payment applies (Q1, Q2, Q3, or Q4)</description>
    <formula>IF(ISBLANK( Date_paid__c ), &quot;&quot;,
 &quot;Q&quot; &amp; TEXT(MOD(FLOOR((MONTH(Date_paid__c) - 1) / 3) + 2, 4) + 1)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The quarter of the fiscal year to which this payment applies (Q1, Q2, Q3, or Q4)</inlineHelpText>
    <label>Quarter</label>
    <type>Text</type>
</CustomField>