force-app/main/default/objects/Payment__c/fields/Recipient_names__c.field-meta.xml
<CustomField>
    <fullName>Recipient_names__c</fullName>
    <description>If Recipient type is non-empty, this should be the list of individual names, or bank names</description>
    <inlineHelpText>If Recipient type is non-empty, this should be the list of individual names, or bank names</inlineHelpText>
    <label>Recipient names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>