force-app/main/default/objects/Payment__c/validationRules/DateReturnedAmountReturned.validationRule-meta.xml
<ValidationRule>
    <fullName>DateReturnedAmountReturned</fullName>
    <active>true</active>
    <description>Date Returned and Amount Returned must either be both blank or both non-blank.</description>
    <errorConditionFormula>OR(
 AND(
  NOT(ISBLANK( Date_returned__c )),
  ISBLANK( Amount_returned__c )
 ),
 AND(
  ISBLANK( Date_returned__c ),
  NOT(ISBLANK( Amount_returned__c ))
 )
)</errorConditionFormula>
    <errorMessage>Date Returned and Amount Returned must either be both blank or both non-blank.</errorMessage>
</ValidationRule>