force-app/main/default/objects/Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Proposal__c</columns>
    <columns>Account_name__c</columns>
    <columns>Payment_type__c</columns>
    <columns>Amount_paid__c</columns>
    <columns>Date_paid__c</columns>
    <columns>Prop_status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>